--- a/final/package.json
+++ b/final/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.8.2",
     "ejs": "^3.1.10",
     "express": "^4.21.2",
     "final": "file:"
