--- a/final/package.json
+++ b/final/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.8.2",
+    "canvas": "^3.1.0",
     "ejs": "^3.1.10",
     "express": "^4.21.2",
     "final": "file:"
