--- a/final/package.json
+++ b/final/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "axios": "^1.8.2",
     "canvas": "^3.1.0",
+    "cheerio": "^1.0.0",
     "ejs": "^3.1.10",
     "express": "^4.21.2",
+    "express-session": "^1.18.1",
     "final": "file:"
   }
 }
