--- a/final/package.json
+++ b/final/package.json
@@ -16,6 +16,7 @@
     "ejs": "^3.1.10",
     "express": "^4.21.2",
     "express-session": "^1.18.1",
+    "final": "file:",
     "mongodb-legacy": "^6.1.3"
   }
 }
