--- a/final/package.json
+++ b/final/package.json
@@ -18,6 +18,7 @@
     "express": "^4.21.2",
     "express-session": "^1.18.1",
     "final": "file:",
-    "mongodb-legacy": "^6.1.3"
+    "mongodb-legacy": "^6.1.3",
+    "ws": "^8.18.1"
   }
 }
